# aperture

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  app.rc  build.rs  rust-toolchain.toml
src/: ai.rs  bitwarden.rs  blocker.rs  import.rs  main.rs  safety.rs  search.rs  store.rs  sync.rs  webauthn.rs
src/ui/: ai.html  chrome.html  filters.txt  home.html  safebrowse.txt
